@@ -213,6 +213,7 @@ ReadValues()
 
     if (new_score_exit != ast.GetScoreExit()) {
       ast.SetScoreExit(new_score_exit);
+      ordered_task->ClearName();
       task_modified = true;
     }
   }
@@ -251,6 +252,7 @@ OnRemoveClicked()
   if (!ordered_task->GetFactory().Remove(active_index))
     return;
 
+  ordered_task->ClearName();
   task_modified = true;
   wf->SetModalResult(mrCancel);
 }
@@ -275,6 +277,7 @@ OnRelocateClicked()
     return;
 
   ordered_task->GetFactory().Relocate(active_index, *wp);
+  ordered_task->ClearName();
   task_modified = true;
   RefreshView();
 }
@@ -283,6 +286,7 @@ static void
 OnTypeClicked()
 {
   if (dlgTaskPointType(&ordered_task, active_index)) {
+    ordered_task->ClearName();
     task_modified = true;
     RefreshView();
   }
@@ -316,6 +320,7 @@ static void
 OnOptionalStartsClicked()
 {
   if (dlgTaskOptionalStarts(&ordered_task)) {
+    ordered_task->ClearName();
     task_modified = true;
     RefreshView();
   }
@@ -370,6 +375,7 @@ dlgTaskPointShowModal(OrderedTask **task,
     task_modified = true;
   } 
   if (task_modified) {
+    ordered_task->ClearName();
     ordered_task->UpdateGeometry();
   }
   return task_modified;
