@@ -49,7 +49,7 @@ OrderedTaskPointLabel(TaskPointType type, const TCHAR *name,
 void OrderedTaskPointRadiusLabel(const ObservationZonePoint &ozp, TCHAR* radius);
 
 bool
-OrderedTaskSave(const OrderedTask &task);
+OrderedTaskSave(OrderedTask &task);
 
 #endif
 
